# scsat1-fsw

./: .gitignore  .mailmap  CMakeLists.txt  CODEOWNERS  Kconfig  Makefile  README.org  west.yml
.github/: dependabot.yml
.github/workflows/: build.yaml  gitlint.yaml  linelint.yaml
adcs/: CMakeLists.txt  Kconfig  Kconfig.mon  Kconfig.syshk  Kconfig.thread  README.org  app.overlay  prj.conf
adcs/src/: csp.c  csp.h  main.c  version.h
adcs/src/cmd/: handler.c  handler.h  imu_tlm.c  imu_tlm.h  pwrctrl.c  pwrctrl.h  tlm.c  tlm.h
adcs/src/mon/: cv.c  cv.h  monitor.c  monitor.h  system.c  system.h  temp.c  temp.h
adcs/src/tlm/: syshk.c
boards/arm/scsat1_adcs/: Kconfig.board  Kconfig.defconfig  board.cmake  scsat1_adcs.dts  scsat1_adcs.yaml  scsat1_adcs_defconfig
boards/arm/scsat1_main/: Kconfig.board  Kconfig.defconfig  board.cmake  scsat1_main.dts  scsat1_main.yaml  scsat1_main_defconfig
boards/arm/scsat1_main/dts/bindings/: sc,dstrx3.yaml
boards/sc/scsat1_adcs/: Kconfig.defconfig  Kconfig.scsat1_adcs  board.yml  scsat1_adcs.dts  scsat1_adcs.yaml
boards/sc/scsat1_adcs/dts/bindings/: sc,fpgaconf.yaml  sc,fpgamon.yaml  sc,fpgasys.yaml
boards/sc/scsat1_main/: Kconfig.defconfig  Kconfig.scsat1_main  board.yml  scsat1_main.dts  scsat1_main.yaml
boards/sc/scsat1_main/dts/bindings/: sc,dstrx3.yaml  sc,fpgahrmem.yaml
bootloader/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
bootloader/src/: main.c  qspi_norflash.c  qspi_norflash.h  version.h
drivers/can/: CMakeLists.txt  Kconfig.sccan  can_sccan.c
drivers/i2c/: CMakeLists.txt  Kconfig.sc
drivers/misc/: CMakeLists.txt  Kconfig
drivers/misc/dstrx3/: Kconfig  sc_dstrx3.c  sc_dstrx3.h
drivers/misc/fpga/: CMakeLists.txt  Kconfig  Kconfig.conf  Kconfig.hrmem  Kconfig.mon  sc_fpgaconf.c  sc_fpgaconf.h  sc_fpgahrmem.c  sc_fpgahrmem.h  sc_fpgamon.c  sc_fpgamon.h  sc_fpgasys.c  sc_fpgasys.h
drivers/pwm/: CMakeLists.txt  Kconfig.sc
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.sc  spi_sc.c
include/: sc_csp.h
lib/: CMakeLists.txt  Kconfig
lib/core/: CMakeLists.txt  Kconfig  Kconfig.adcs  Kconfig.main  cv_adcs.c  cv_adcs.h  cv_main.c  cv_main.h  pwrctrl_adcs.c  pwrctrl_adcs.h  pwrctrl_main.c  pwrctrl_main.h  temp_adcs.c  temp_adcs.h  temp_main.c  temp_main.h  wdog.c
lib/csp/: CMakeLists.txt  Kconfig  eps.c  eps.h  file.c  file.h  flash.c  flash.h  reply.c  reply.h  sys.c  sys.h  upload.c  upload.h
lib/flash/: CMakeLists.txt  Kconfig  config_nor.c  config_nor.h  data_nor.c  data_nor.h
lib/fram/: CMakeLists.txt  Kconfig  common.c  fram.c  fram.h  qspi_common.h
lib/gnss/: CMakeLists.txt  Kconfig  gnss.c
lib/imu/: CMakeLists.txt  Kconfig  imu.c  imu.h
lib/mgnm/: CMakeLists.txt  Kconfig  mgnm.c  mgnm.h
lib/mtq/: CMakeLists.txt  Kconfig  mtq.c
lib/rw/: CMakeLists.txt  Kconfig  rw.c  rw.h
lib/sunsens/: CMakeLists.txt  Kconfig  sunsens.c  sunsens.h
main/: CMakeLists.txt  Kconfig  Kconfig.mon  Kconfig.syshk  Kconfig.thread  README.org  prj.conf
main/src/: csp.c  main.c  version.h
main/src/cmd/: handler.c  handler.h  mtqctrl.c  mtqctrl.h  pwrctrl.c  tlm.c
main/src/mon/: cv.c  cv.h  ecc.c  ecc.h  mgnm_mon.c  mgnm_mon.h  monitor.c  sunsens_mon.c  sunsens_mon.h  system.c  system.h  temp.c  temp.h
main/src/tlm/: syshk.c  syshk.h
src/: cmd_parser.c  cmd_parser.h  fpga.c  fpga.h  i2c-gpio.c  i2c-gpio.h  i2c.h  ina3221.c  ina3221.h  interrupt.c  interrupt.h  ioboard.c  main.c  spi.c  spi.h  timer.c  timer.h  tmp175.c  tmp175.h  trch.h  usart.c  usart.h  utils.h  version.h
tests/hwtest/adcs/: CMakeLists.txt  Kconfig  prj.conf
tests/hwtest/adcs/src/: adcs_init.c  adcs_init.h  common.h  csp.c  csp.h  cv.c  cv.h  cv_test.c  cv_test.h  gnss.c  gnss.h  gnss_test.c  gnss_test.h  imu.c  imu.h  imu_test.c  imu_test.h  loop_test.c  loop_test.h  main.c  pwrctrl.c  pwrctrl.h  rw.c  rw.h  rw_test.c  rw_test.h  rw_test_Y.c  rw_test_x.c  syshk.c  syshk.h  syshk_test.c  syshk_test.h  sysmon.c  sysmon.h  temp.c  temp.h  temp_test.c  temp_test.h  version.h  wdog.c  (+1 more)
tests/hwtest/main/: CMakeLists.txt  Kconfig  prj.conf
tests/hwtest/main/src/: common.h  csp.c  csp.h  csp_test.c  csp_test.h  cv.c  cv.h  cv_test.c  cv_test.h  dstrx3_test.c  dstrx3_test.h  loop_test.c  loop_test.h  main.c  main_init.c  main_init.h  mgnm.c  mgnm.h  mgnm_test.c  mgnm_test.h  mtq.c  mtq.h  mtq_test.c  mtq_test.h  pwrctrl.c  pwrctrl.h  scbus.c  scbus.h  sunsens.c  sunsens.h  sunsens_test.c  sunsens_test.h  syshk.c  syshk.h  syshk_test.c  syshk_test.h  sysmon.c  sysmon.h  temp.c  temp.h  (+4 more)
tests/hwtest/tools/: README.org  adcs_config.yaml  eps_config.yaml  main_config.yaml  parse_adcs.py  parse_eps.py  parse_main.py  parse_srs3.py  parse_yamcs.py  srs3_config.yaml
tools/gnuradio/: README.md  no_gui_srs3_lime.py  no_gui_srs3_pluto.py  no_gui_srs3_usrp.py  srs3_no_gui.grc
trch/: .editorconfig  .gitignore
trch/src/: can.h  fpga.c  fpga.h  interrupt.c  interrupt.h  ioboard.h  mcp2517fd.c  spi.h
zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/drivers/can/: CMakeLists.txt  Kconfig  can_sccan.c
zephyr/drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.sc  i2c_sc.c
zephyr/drivers/misc/: Kconfig  sc_dstrx3.c  sc_dstrx3.h
zephyr/drivers/pwm/: CMakeLists.txt  Kconfig  pwm_sc.c
zephyr/drivers/spi/: spi_sc.c
zephyr/dts/bindings/can/: sc,can.yaml
zephyr/dts/bindings/i2c/: sc,i2c.yaml
zephyr/dts/bindings/pwm/: sc,pwm.yaml
zephyr/dts/bindings/qspi/: sc,qspi.yaml
